# h265ify

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  README.md  justfile  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE.mermaid.md  flags.md  hardware.md  workflows.md
src/h265ify/: __init__.py  encoder.py  hardware.py  logger.py  pipeline.py  probe.py  vmaf.py
src/h265ify/commands/: __init__.py  encode.py  replace.py  report.py  shared.py  vmaf.py
tests/: test_cli.py  test_encoder.py  test_encoder_10bit.py  test_encoder_run.py  test_encoder_warnings.py  test_hardware.py  test_hardware_detect.py  test_hardware_get_encoders.py  test_integration.py  test_logger.py  test_logger_oserror.py  test_main.py  test_main_commands.py  test_main_commands_return.py  test_main_encode.py  test_pipeline.py  test_pipeline_discovery.py  test_pipeline_find_replace.py  test_pipeline_get_output_path.py  test_pipeline_progress.py  test_pipeline_run.py  test_pipeline_run_2.py  test_pipeline_run_3.py  test_pipeline_run_4.py  test_pipeline_sigint.py  test_pipeline_summary.py  test_probe.py  test_probe_ffprobe.py  test_report_ffmpeg_log.py  test_vmaf.py
